<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Título -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTitle"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/title_note" />

            <!-- Switch para marcar la nota como completada -->
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/isCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb"
                app:trackTint="@color/switch_track" />
        </LinearLayout>

        <!-- Contenido -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvContent"
            style="@style/Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/content_note" />

        <!-- Fecha -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/date_note" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>